--- a/app/src/main/res/layout/activity_oauth.xml
+++ b/app/src/main/res/layout/activity_oauth.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:gravity="center"
     android:background="@color/colorPrimary"
     android:orientation="vertical">
 
@@ -11,8 +11,8 @@
         android:id="@+id/oauthLoading"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_centerInParent="true"
         android:orientation="vertical"
+        android:layout_marginTop="50dp"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/world"/>
@@ -21,8 +21,8 @@
         android:id="@+id/oauthError"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_centerInParent="true"
         android:orientation="vertical"
+        android:layout_marginTop="50dp"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/cloud_disconnection"
@@ -33,7 +33,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="20dp"
         android:layout_below="@+id/oauthLoading"
         android:shadowColor="@color/black"
         android:shadowDx="2"
@@ -42,5 +41,16 @@
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp"
         android:text="@string/oauth_info"/>
+
+    <ImageView
+        android:id="@+id/retryConnection"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/oauthInfo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/refresh"
+        android:visibility="gone"
+        tools:ignore="ContentDescription" />
 
 </RelativeLayout>
