Change corporate blue color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="corporate_orange">#FF8800</color>
     <color name="corporate_amber">#FF9800</color>
     <color name="corporate_translucent_orange">#90FF8800</color>
-    <color name="corporate_blue">#184857</color>
+    <color name="corporate_blue">#00BFA5</color>
     <color name="black">#000000</color>
 </resources>
